NORWEGIAN (Bokmal): Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@98004 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nb.properties
+++ b/rm-share/config/alfresco/messages/rm_nb.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Destruer bekreftelse
 message.confirm2.destroy=Filinnholdet slettes for bestandig, er du sikker p\u00e5 at du vil fortsette?
 message.confirm2.destroyMultiple=Filinnholdet slettes for bestandig, er du sikker p\u00e5 at du vil fortsette?
 message.confirm.hide.record.title=Skjul oppf\u00f8ring
-message.confirm.hide.record=Oppf\u00f8ringen skjules og du vil ikke kunne se oppf\u00f8ringen innen samarbeidsomr\u00e5det noe lenger.
+message.confirm.hide.record=Denne filen er gjort til en oppf\u00f8ring. Klikk p\u00e5 OK for \u00e5 skjule den slik at du ikke ser den her.
 message.select=Velg...
 message.pdf-record-fonts.title=PDF-oppf\u00f8ringer: Innebygd skrifttypekontroll
 message.pdf-record-fonts.accession=Kontroller at eventuelle PDF-oppf\u00f8ringer som nettopp er aksessert, inkluder gjeldende innebygde skrifttyper.
@@ -91,7 +91,7 @@ message.request-info-failure=Det oppstod en feil under foresp\u00f8rselen om inf
 message.confirm.delete-hold.title=Slett hold
 message.confirm.delete-hold=Er du sikker p\u00e5 at du vil slette ''{0}''?
 message.confirm.close-rejected-record.title=Bekreft
-message.confirm.close-rejected-record=Er du sikker p\u00e5 at du vil fjerne den avviste oppf\u00f8ringsadvarselen?
+message.confirm.close-rejected-record=Er du sikker p\u00e5 at du vil fjerne den avviste oppf\u00f8ringsadvarselen. Etter at den er fjernet, vil alternativene for \u00e5 kunne erkl\u00e6re filen som en oppf\u00f8ring, v\u00e6r tilgjengelige igjen.
 message.confirm.unlink.title=Koble fra bekreftelsen
 message.confirm.unlink.text=Er du sikker p\u00e5 at du vil koble fra oppf\u00f8ringen?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Last opp ny versjon
 actions.view-details=Vis detaljer
 actions.view-audit-log=Vis revisjonslogg
 actions.create-record=Erkl\u00e6r som oppf\u00f8ring
-actions.declare-as-version-record=Erkl\u00e6r som versjonsoppf\u00f8ring
+actions.declare-as-version-record=Erkl\u00e6r versjon som oppf\u00f8ring
 actions.hide-record=Skjul oppf\u00f8ring
 actions.reject=Avvis
 actions.request-info=Be om informasjon
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=Kunne ikke angre cut off av ''{0}''
 message.undo-cutoff.success=Angre cut off av ''{0}''
 message.create-disposition-schedule.failure=Kunne ikke opprette disposisjonsplan for ''{0}''
 message.create-disposition-schedule.success=Disposisjonsplan for ''{0}'' er opprettet
-message.create-record.success=Er n\u00e5 erkl\u00e6rt som oppf\u00f8ring
+message.create-record.success=Denne filen er gjort til en oppf\u00f8ring og den har begrensede tilgjengelige handlinger
 message.create-record.failure=Kunne ikke erkl\u00e6re som oppf\u00f8ring
+message.declare-version-as-record.success=Denne versjonen av filen er blitt erkl\u00e6rt en oppf\u00f8ring
+message.declare-version-as-record.failure=Kunne ikke erkl\u00e6re versjonen som oppf\u00f8ring
 message.hide-record.success=Oppf\u00f8ringen ''{0}'' er n\u00e5 skjult
 message.hide-record.failure=Kunne ikke skjule oppf\u00f8ringen ''{0}''
 message.reject.reason=Grunn:
@@ -481,4 +483,4 @@ file-to.substitution.date.year.week.label=Ukenummer (f.eks. 31)
 
 ## Banner icon messages
 banner.rejected-record.info=Se informasjon om den avviste oppf\u00f8ringen
-banner.rejected-record.close=Fjern den avviste advarselsoppf\u00f8ringen
+banner.rejected-record.close=Fjern den avviste oppf\u00f8ringsadvarselen
