--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_nb.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_nb.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=Ingen nye forhold definert
+label.list.no.data.message=Det finnes ikke noen definerte forhold enn\u00e5
 label.toolbar.relationships=Forhold
-label.button.new-relationship=Legg til nytt forhold
+label.button.new-relationship=Legg til forhold
 label.confirmation.title.delete-relationship=Slett forhold
 label.confirmationPrompt.delete-relationship=Er du siker p\u00e5 at du vil slette ''{node.properties.cm:name}''?
 label.delete-relationship=Slett forhold
