BRAZILIAN PORTUGUESE: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@98006 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_pt_BR.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=N\u00e3o h\u00e1 nenhuns relacionamentos definidos
+label.list.no.data.message=N\u00e3o existem relacionamentos definidos
 label.toolbar.relationships=Relacionamentos
-label.button.new-relationship=Adicionar novo relacionamento
+label.button.new-relationship=Adicionar relacionamento
 label.confirmation.title.delete-relationship=Excluir relacionamento
 label.confirmationPrompt.delete-relationship=Tem tem certeza que deseja excluir ''{node.properties.cm:name}''?
 label.delete-relationship=Excluir relacionamento
