--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Destruir confirma\u00e7\u00e3o
 message.confirm2.destroy=O conte\u00fado do arquivo ser\u00e1 permanentemente exclu\u00eddo. Tem certeza de que deseja continuar?
 message.confirm2.destroyMultiple=O conte\u00fado dos arquivos ser\u00e1 permanentemente exclu\u00eddo. Tem certeza de que deseja continuar?
 message.confirm.hide.record.title=Ocultar documento arquiv\u00edstico
-message.confirm.hide.record=Voc\u00ea est\u00e1 ocultando o documento arquiv\u00edstico e n\u00e3o conseguir\u00e1 mais v\u00ea-lo em seu site de colabora\u00e7\u00e3o.
+message.confirm.hide.record=Este arquivo foi feito como um documento arquiv\u00edstico. Clique em OK para escond\u00ea-lo e que n\u00e3o possa ser visto aqui.
 message.select=Selecionar...
 message.pdf-record-fonts.title=Arquivos PDF: Verifica\u00e7\u00e3o de fontes incorporadas
 message.pdf-record-fonts.accession=Verifique se algum arquivo PDF que acabou de ser aderido inclui as fontes incorporadas aplic\u00e1veis.
@@ -91,7 +91,7 @@ message.request-info-failure=Ocorreu um erro ao solicitar informa\u00e7\u00f5es
 message.confirm.delete-hold.title=Excluir espera
 message.confirm.delete-hold=Tem certeza de que deseja excluir ''{0}''?
 message.confirm.close-rejected-record.title=Confirmar
-message.confirm.close-rejected-record=Tem certeza de que deseja remover a advert\u00eancia do documento arquiv\u00edstico rejeitado?
+message.confirm.close-rejected-record=Tem certeza de que deseja remover a advert\u00eancia do documento arquiv\u00edstico rejeitado. Uma vez removida, as op\u00e7\u00f5es para declarar o arquivo como um documento arquiv\u00edstico estar\u00e3o dispon\u00edveis novamente.
 message.confirm.unlink.title=Anular v\u00ednculo da confirma\u00e7\u00e3o
 message.confirm.unlink.text=Tem certeza que deseja anular o v\u00ednculo do documento arquiv\u00edstico?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Carregar nova vers\u00e3o
 actions.view-details=Visualizar detalhes
 actions.view-audit-log=Visualizar log de auditoria
 actions.create-record=Declarar como documento arquiv\u00edstico
-actions.declare-as-version-record=Declarar como documento arquiv\u00edstico da vers\u00e3o
+actions.declare-as-version-record=Declarar vers\u00e3o como documento arquiv\u00edstico
 actions.hide-record=Ocultar documento arquiv\u00edstico
 actions.reject=Rejeitar
 actions.request-info=Solicitar informa\u00e7\u00f5es
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=N\u00e3o foi poss\u00edvel desfazer corte de ''{0}''
 message.undo-cutoff.success=Desfazer corte em ''{0}''
 message.create-disposition-schedule.failure=N\u00e3o foi poss\u00edvel criar a programa\u00e7\u00e3o de disposi\u00e7\u00e3o para ''{0}''
 message.create-disposition-schedule.success=Programa\u00e7\u00e3o de disposi\u00e7\u00e3o para ''{0}'' criada
-message.create-record.success=Declarado com sucesso como documento arquiv\u00edstico
+message.create-record.success=Este arquivo foi feito como um documento arquiv\u00edstico e tem a\u00e7\u00f5es limitadas dispon\u00edveis
 message.create-record.failure=N\u00e3o foi poss\u00edvel declarar como documento arquiv\u00edstico
+message.declare-version-as-record.success=Esta vers\u00e3o do arquivo foi declarada como um documento arquiv\u00edstico
+message.declare-version-as-record.failure=N\u00e3o foi poss\u00edvel declarar a vers\u00e3o como documento arquiv\u00edstico
 message.hide-record.success=Documento arquiv\u00edstico ''{0}'' oculto com sucesso
 message.hide-record.failure=N\u00e3o foi poss\u00edvel ocultar documento arquiv\u00edstico ''{0}''
 message.reject.reason=Motivo:
