SIMPLIFIED CHINESE: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@98007 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_zh_CN.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=\u672a\u5b9a\u4e49\u4efb\u4f55\u5173\u7cfb
+label.list.no.data.message=\u5c1a\u672a\u5b9a\u4e49\u4efb\u4f55\u5173\u7cfb
 label.toolbar.relationships=\u5173\u7cfb
-label.button.new-relationship=\u6dfb\u52a0\u65b0\u5173\u7cfb
+label.button.new-relationship=\u6dfb\u52a0\u5173\u7cfb
 label.confirmation.title.delete-relationship=\u5220\u9664\u5173\u7cfb
 label.confirmationPrompt.delete-relationship=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{node.properties.cm:name}''\uff1f
 label.delete-relationship=\u5220\u9664\u5173\u7cfb
