--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=\u9500\u6bc1\u786e\u8ba4
 message.confirm2.destroy=\u5c06\u6c38\u4e45\u5220\u9664\u6587\u4ef6\u7684\u5185\u5bb9\uff0c\u662f\u5426\u786e\u5b9a\u7ee7\u7eed\uff1f
 message.confirm2.destroyMultiple=\u5c06\u6c38\u4e45\u5220\u9664\u6587\u4ef6\u7684\u5185\u5bb9\uff0c\u662f\u5426\u786e\u5b9a\u7ee7\u7eed\uff1f
 message.confirm.hide.record.title=\u9690\u85cf\u8bb0\u5f55
-message.confirm.hide.record=\u60a8\u6b63\u5728\u9690\u85cf\u8bb0\u5f55\u5e76\u4e14\u5c06\u65e0\u6cd5\u518d\u5728\u60a8\u7684\u5408\u4f5c\u7ad9\u70b9\u4e2d\u770b\u5230\u8be5\u8bb0\u5f55\u3002
+message.confirm.hide.record=\u5df2\u7ecf\u5bf9\u6b64\u6587\u4ef6\u505a\u4e86\u8bb0\u5f55\u3002 \u5355\u51fb''\u786e\u5b9a''\u4ee5\u9690\u85cf\u5b83\uff0c\u4f7f\u5176\u4e0d\u4f1a\u5728\u6b64\u5904\u663e\u793a\u3002
 message.select=\u9009\u62e9...
 message.pdf-record-fonts.title=PDF \u8bb0\u5f55\uff1a\u5d4c\u5165\u5b57\u4f53\u68c0\u67e5
 message.pdf-record-fonts.accession=\u68c0\u67e5\u521a\u5165\u7ba1\u7684\u4efb\u4f55 PDF \u8bb0\u5f55\u662f\u5426\u5305\u542b\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
@@ -91,7 +91,7 @@ message.request-info-failure=\u5728\u8bf7\u6c42\u4fe1\u606f\u65f6\u51fa\u9519
 message.confirm.delete-hold.title=\u5220\u9664\u4fdd\u5b58
 message.confirm.delete-hold=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
 message.confirm.close-rejected-record.title=\u786e\u8ba4
-message.confirm.close-rejected-record=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a\uff1f
+message.confirm.close-rejected-record=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a\u3002 \u4e00\u65e6\u5220\u9664\uff0c\u58f0\u660e\u6587\u4ef6\u4e3a\u8bb0\u5f55\u7684\u9009\u9879\u5c06\u518d\u6b21\u53ef\u7528\u3002
 message.confirm.unlink.title=\u53d6\u6d88\u786e\u8ba4\u7684\u94fe\u63a5
 message.confirm.unlink.text=\u662f\u5426\u786e\u5b9a\u8981\u53d6\u6d88\u8bb0\u5f55\u7684\u94fe\u63a5\uff1f
 
@@ -137,7 +137,7 @@ actions.upload-new-version=\u4e0a\u4f20\u65b0\u7248\u672c
 actions.view-details=\u67e5\u770b\u8be6\u7ec6\u4fe1\u606f
 actions.view-audit-log=\u67e5\u770b\u5ba1\u8ba1\u65e5\u5fd7
 actions.create-record=\u58f0\u660e\u4e3a\u8bb0\u5f55
-actions.declare-as-version-record=\u58f0\u660e\u4e3a\u7248\u672c\u8bb0\u5f55
+actions.declare-as-version-record=\u58f0\u660e\u7248\u672c\u4e3a\u8bb0\u5f55
 actions.hide-record=\u9690\u85cf\u8bb0\u5f55
 actions.reject=\u62d2\u7edd
 actions.request-info=\u8bf7\u6c42\u4fe1\u606f
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=\u65e0\u6cd5\u64a4\u6d88 ''{0}'' \u7684\u4e2d\u65ad
 message.undo-cutoff.success=\u64a4\u6d88 ''{0}'' \u4e0a\u7684\u4e2d\u65ad
 message.create-disposition-schedule.failure=\u65e0\u6cd5\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
 message.create-disposition-schedule.success=\u5df2\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
-message.create-record.success=\u5df2\u6210\u529f\u58f0\u660e\u4e3a\u8bb0\u5f55
+message.create-record.success=\u5df2\u7ecf\u5bf9\u6b64\u6587\u4ef6\u505a\u4e86\u8bb0\u5f55\u5e76\u4e14\u5176\u53ef\u7528\u7684\u64cd\u4f5c\u6709\u9650
 message.create-record.failure=\u65e0\u6cd5\u58f0\u660e\u4e3a\u8bb0\u5f55
+message.declare-version-as-record.success=\u6587\u4ef6\u7684\u6b64\u7248\u672c\u5df2\u58f0\u660e\u4e3a\u8bb0\u5f55
+message.declare-version-as-record.failure=\u65e0\u6cd5\u58f0\u660e\u7248\u672c\u4e3a\u8bb0\u5f55
 message.hide-record.success=\u5df2\u6210\u529f\u9690\u85cf\u8bb0\u5f55 ''{0}''
 message.hide-record.failure=\u65e0\u6cd5\u9690\u85cf\u8bb0\u5f55 ''{0}''
 message.reject.reason=\u539f\u56e0\uff1a
@@ -481,4 +483,4 @@ file-to.substitution.date.year.week.label=\u5e74\u5ea6\u7b2c\u51e0\u5468\uff08\u
 
 ## Banner icon messages
 banner.rejected-record.info=\u8bf7\u53c2\u9605\u6709\u5173\u62d2\u7edd\u7684\u8bb0\u5f55\u7684\u4fe1\u606f
-banner.rejected-record.close=\u5220\u9664\u62d2\u7edd\u7684\u8b66\u544a\u8bb0\u5f55
+banner.rejected-record.close=\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a
