GERMAN: Updated bundle for RM 2.2.1 based on EN-rev98763
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@98839 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_de.properties
@@ -20,9 +20,11 @@ message.create-failure=Die folgende neue benutzerdefinierte Eigenschaft konnte n
 message.edit-success=Benutzerdefinierte Eigenschaft erfolgreich gespeichert.
 message.edit-failure=Die folgende benutzerdefinierte Eigenschaft konnte nicht gespeichert werden: {0}
 message.delete.title=Benutzerdefinierte Eigenschaft l\u00f6schen
-message.delete.text=Wollen Sie wirklich l\u00f6schen: {0}?
+message.delete.text=M\u00f6chten Sie Folgendes wirklich l\u00f6schen: {0}?
 message.delete-success=Benutzerdefinierte Eigenschaft erfolgreich gel\u00f6scht.
 message.delete-failure=Die folgende benutzerdefinierte Eigenschaft konnte nicht gel\u00f6scht werden: {0}
 
-mandatory.true=Wahr
-mandatory.false=Falsch
+mandatory.true=True
+mandatory.false=False
+
+button.new.custom-metadata=Neu
