RM-2050 (Classify document dialog)
+review RM @dwebster

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@102024 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -1,2 +1,4 @@
 label.classify.dialog.title=Classify
-label.classify.reasons=Classification Reason
+label.classify.levels=Classification
+label.classify.authority=Classification Authority
+label.classify.reasons=Classification Reason(s)
