RM-2050 (Classify document dialog)
* Added the functionality to send the classification request

+review RM-27

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@102121 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -1,4 +1,6 @@
-label.classify.dialog.title=Classify
+label.classify.dialog.title=Classify Content
 label.classify.levels=Classification
 label.classify.authority=Classification Authority
 label.classify.reasons=Classification Reason(s)
+label.classify.content.success=Successfully classified content
+label.classify.content.failure=Couldn't classify content
