RM-2176 (Classify content action does not work in a collaboration site)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@102152 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -1,3 +1,5 @@
+label.button.create=Create
+label.button.cancel=Cancel
 label.classify.dialog.title=Classify Content
 label.classify.levels=Classification
 label.classify.authority=Classification Authority
