--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -1,6 +1,7 @@
-label.button.create=Create
+label.button.create=Classify
 label.button.cancel=Cancel
-label.classify.dialog.title=Classify Content
+label.classify.dialog.title=Classify File
+label.classify.dialog.title.rm=Classify Record
 label.classify.levels=Classification
 label.classify.authority=Classification Authority
 label.classify.reasons=Classification Reason(s)
