--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=Besonders relevanter Record
 label.set.disposition=Entsorgungsplan
 label.set.customMetadata=Benutzerdefinierte Eigenschaften
 label.set.recordVersion=Record-Version
+label.set.classification=Klassifizierung
 label.hold.reason=Grund
 label.hold.delete.empty=Sperrbereich l\u00f6schen, wenn leer
 label.recordLevelDisposition=Angewendet auf
@@ -57,6 +58,10 @@ label.file=Ablegen
 label.box=Box
 label.versionDescription=Versionsbeschreibung
 label.VersionLabel=Versionsbezeichnung
+label.initialClassification=Urspr\u00fcngliche Klassifizierung
+label.currentClassification=Momentane Klassifizierung
+label.classificationAuthority=Klassifizierungsinstanz
+label.classificationReasons=Grund/Gr\u00fcnde f\u00fcr Klassifizierung
 
 ## Common Property Selector
 label.menu.content=Inhalt
@@ -91,7 +96,7 @@ message.request-info-failure=Beim Anfordern von Informationen ist ein Fehler auf
 message.confirm.delete-hold.title=Sperrbereich l\u00f6schen
 message.confirm.delete-hold=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
 message.confirm.close-rejected-record.title=Best\u00e4tigen
-message.confirm.close-rejected-record=M\u00f6chten Sie die Warnung f\u00fcr den abgelehnten Record wirklich l\u00f6schen? Wenn sie sie l\u00f6schen, stehen die Optionen zum Deklarieren der Datei als Record wieder zur Verf\u00fcgung.
+message.confirm.close-rejected-record=M\u00f6chten Sie die Warnung f\u00fcr den abgelehnten Record wirklich l\u00f6schen? Nach dem L\u00f6schen werden die Optionen f\u00fcr die Deklaration der Datei als Record wieder verf\u00fcgbar.
 message.confirm.unlink.title=Aufheben der Verkn\u00fcpfung best\u00e4tigen
 message.confirm.unlink.text=M\u00f6chten Sie die Verkn\u00fcpfung zum Record wirklich aufheben?
 
@@ -151,6 +156,7 @@ actions.file-hold-report=Sperrbericht generieren
 actions.move-dm-record=Record verschieben
 actions.recorded-version-config=Optionen f\u00fcr automatische Deklaration
 actions.add-relationship=Beziehung hinzuf\u00fcgen
+actions.classify-content=Klassifizieren
 
 ## File Plan Action Outcomes
 message.multi-select={0} ausgew\u00e4hlte Elemente
@@ -250,6 +256,9 @@ status.rm-version-record=Versions-Record
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=Alle Revisionen werden als Record deklariert
 status.rm-recorded-version-history-major-revisions=Nur Hauptrevisionen werden als Record deklariert
+## Classification
+status.rm-classified-record=Klassifizierter Record
+status.rm-classified-document=Klassifizierte Datei
 # Exif
 status.exif=EXIF-Metadaten verf\u00fcgbar
 status.geographic=Geolocation-Metadaten verf\u00fcgbar
@@ -315,7 +324,7 @@ label.dod.captureDate=Erfassungsdatum
 label.dod.contact=Kontakt
 label.dod.contentManagementSystem=Content Management System
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=Rollen definieren
 tool.rm-define-roles.description=Rollen erstellen und bearbeiten
 tool.rm-custom-metadata.label=Benutzerdefinierte Metadaten
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=Berichte \u00fcber Benutzerrechte
 tool.rm-user-rights.description=Berichte \u00fcber Benutzerrechte
 tool.rm-users-and-groups.label=Benutzer und Gruppen
 tool.rm-users-and-groups.description=Benutzer und Gruppen
+
+# Admin Console tools
+tool.group.classification=Klassifizierung
+tool.classification-levels.label=Klassifikationsebenen
+tool.classification-levels.description=Klassifikationsebenen
+tool.security-clearance.label=Sicherheitsfreigabe
+tool.security-clearance.description=Sicherheitsfreigabe
 
 ## Buttons
 button.sort.ascending=Aufsteigend sortieren
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=Woche des Jahres (z. B. 31)
 ## Banner icon messages
 banner.rejected-record.info=Angaben zu abgelehntem Record anzeigen
 banner.rejected-record.close=Warnhinweis f\u00fcr abgelehnen Record entfernen
+banner.classification.info=Klassifizierung
