SPANISH: Updated RM 3.0 bundle based on EN-RM-rev105468
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106516 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=Documento de archivo vital
 label.set.disposition=Planificaci\u00f3n de disposici\u00f3n
 label.set.customMetadata=Propiedades personalizadas
 label.set.recordVersion=Versi\u00f3n del documento de archivo
+label.set.classification=Clasificaci\u00f3n
 label.hold.reason=Raz\u00f3n
 label.hold.delete.empty=Eliminar bloqueo al vaciar
 label.recordLevelDisposition=Aplicado a
@@ -57,6 +58,10 @@ label.file=Fichero
 label.box=Caja
 label.versionDescription=Descripci\u00f3n de la versi\u00f3n
 label.VersionLabel=Etiqueta de la versi\u00f3n
+label.initialClassification=Clasificaci\u00f3n inicial
+label.currentClassification=Clasificaci\u00f3n actual
+label.classificationAuthority=Autoridad de clasificaci\u00f3n
+label.classificationReasons=Razones para la clasificaci\u00f3n
 
 ## Common Property Selector
 label.menu.content=Contenido
@@ -91,7 +96,7 @@ message.request-info-failure=Se ha producido un error al solicitar informaci\u00
 message.confirm.delete-hold.title=Eliminar bloqueo
 message.confirm.delete-hold=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 message.confirm.close-rejected-record.title=Confirmar
-message.confirm.close-rejected-record=\u00bfEst\u00e1 seguro de que desea eliminar el aviso de documento de archivo rechazado? Una vez eliminado, las opciones para declarar el fichero como documento de archivo volver\u00e1n a estar disponibles.
+message.confirm.close-rejected-record=\u00bfEst\u00e1 seguro de que desea eliminar la advertencia de documento de archivo rechazado? Una vez eliminado, las opciones para declarar el fichero como documento de archivo volver\u00e1n a estar disponibles.
 message.confirm.unlink.title=Desvincular confirmaci\u00f3n
 message.confirm.unlink.text=\u00bfEst\u00e1 seguro de que desea desvincular el documento de archivo?
 
@@ -151,6 +156,7 @@ actions.file-hold-report=Generar informe de bloqueo
 actions.move-dm-record=Mover documento de archivo
 actions.recorded-version-config=Opciones de declaraci\u00f3n autom\u00e1tica
 actions.add-relationship=A\u00f1adir Relaci\u00f3n
+actions.classify-content=Clasificar
 
 ## File Plan Action Outcomes
 message.multi-select={0} elementos seleccionados
@@ -250,6 +256,9 @@ status.rm-version-record=Documento de archivo versionado
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=Todas las revisiones se guardar\u00e1n como documento de archivo
 status.rm-recorded-version-history-major-revisions=Solo las revisiones importantes se guardar\u00e1n como documento de archivo
+## Classification
+status.rm-classified-record=Documento de archivo clasificado
+status.rm-classified-document=Fichero clasificado
 # Exif
 status.exif=Metadatos EXIF disponibles
 status.geographic=Metadatos de geolocalizaci\u00f3n disponibles
@@ -315,7 +324,7 @@ label.dod.captureDate=Fecha de captura
 label.dod.contact=Contacto
 label.dod.contentManagementSystem=Sistema de gesti\u00f3n de contenidos
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=Definir roles
 tool.rm-define-roles.description=Crear y editar otro
 tool.rm-custom-metadata.label=Metadatos personalizados
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=Informe de derechos de usuario
 tool.rm-user-rights.description=Informe de derechos de usuario
 tool.rm-users-and-groups.label=Usuarios y grupos
 tool.rm-users-and-groups.description=Usuarios y grupos
+
+# Admin Console tools
+tool.group.classification=Clasificaci\u00f3n
+tool.classification-levels.label=Niveles de clasificaci\u00f3n
+tool.classification-levels.description=Niveles de clasificaci\u00f3n
+tool.security-clearance.label=Permiso de seguridad
+tool.security-clearance.description=Permiso de seguridad
 
 ## Buttons
 button.sort.ascending=Orden ascendente
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=Semana del a\u00f1o (por ejemplo, 31)
 ## Banner icon messages
 banner.rejected-record.info=Ver informaci\u00f3n sobre el documento de archivo rechazado
 banner.rejected-record.close=Eliminar el aviso de documento de archivo rechazado
+banner.classification.info=Clasificaci\u00f3n
