ITALIAN: Updated RM 3.0 bundle based on EN-RM-rev105468
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106518 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_it.properties
@@ -1,7 +1,4 @@
 label.list.no.data.message=Non ci sono ancora relazioni definite
 label.toolbar.relationships=Relazioni
-label.button.new-relationship=Aggiungi Relazione
-label.confirmation.title.delete-relationship=Elimina relazione
-label.confirmationPrompt.delete-relationship=Procedere con l''eliminazione di ''{node.properties.cm:name}''?
+label.button.new-relationship=Aggiungi relazione
 label.delete-relationship=Elimina relazione
-label.delete-relationship.successMessage=Eliminazione di ''{node.properties.cm:name}'' riuscita
