--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
@@ -13,16 +13,16 @@ label.datatype.text=Testo
 label.datatype.boolean=Casella di controllo
 label.datatype.date=Data
 
-message.getpropertiesfail=Impossibile recuperare definizioni propriet\u00e0 personalizzata.
-message.noproperties=Propriet\u00e0 personalizzate definite non presenti.
-message.create-success=Aggiunta propriet\u00e0 personalizzata non riuscita.
-message.create-failure=Impossibile aggiungere nuova propriet\u00e0 personalizzata: {0}
-message.edit-success=Salvataggio propriet\u00e0 personalizzata riuscito.
-message.edit-failure=Impossibile salvare propriet\u00e0 personalizzata: {0}
+message.getpropertiesfail=Impossibile recuperare definizioni di propriet\u00e0 personalizzate.
+message.noproperties=Non \u00e8 stata definita alcuna propriet\u00e0 personalizzata.
+message.create-success=Nuova propriet\u00e0 personalizzata aggiunta.
+message.create-failure=Impossibile aggiungere la nuova propriet\u00e0 personalizzata: {0}
+message.edit-success=Propriet\u00e0 personalizzata salvata.
+message.edit-failure=Impossibile salvare la propriet\u00e0 personalizzata: {0}
 message.delete.title=Elimina propriet\u00e0 personalizzata
 message.delete.text=Procedere con l''eliminazione: {0}?
-message.delete-success=Eliminazione propriet\u00e0 personalizzata riuscita.
-message.delete-failure=Impossibile eliminare propriet\u00e0 personalizzata: {0}
+message.delete-success=Propriet\u00e0 personalizzata eliminata.
+message.delete-failure=Impossibile eliminare la propriet\u00e0 personalizzata: {0}
 
 mandatory.true=Vero
 mandatory.false=Falso
