--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=\u30d0\u30a4\u30bf\u30eb\u30ec\u30b3\u30fc\u30c9
 label.set.disposition=\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
 label.set.customMetadata=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3
 label.set.recordVersion=\u30ec\u30b3\u30fc\u30c9\u306e\u30d0\u30fc\u30b8\u30e7\u30f3
+label.set.classification=\u5206\u985e
 label.hold.reason=\u7406\u7531
 label.hold.delete.empty=\u7a7a\u306e\u5834\u5408\u306f\u30db\u30fc\u30eb\u30c9\u3092\u524a\u9664
 label.recordLevelDisposition=\u9069\u7528\u5148
@@ -57,6 +58,10 @@ label.file=\u6574\u7406\u4fdd\u7ba1
 label.box=\u7bb1
 label.versionDescription=\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u8aac\u660e
 label.VersionLabel=\u30d0\u30fc\u30b8\u30e7\u30f3\u30e9\u30d9\u30eb
+label.initialClassification=\u6700\u521d\u306e\u5206\u985e
+label.currentClassification=\u73fe\u5728\u306e\u5206\u985e
+label.classificationAuthority=\u5206\u985e\u6a29\u9650
+label.classificationReasons=\u5206\u985e\u7406\u7531
 
 ## Common Property Selector
 label.menu.content=\u30b3\u30f3\u30c6\u30f3\u30c4
@@ -70,7 +75,7 @@ label.menu.custom=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3
 button.reject.record=\u30ec\u30b3\u30fc\u30c9\u306e\u5374\u4e0b
 button.request-info=\u60c5\u5831\u306e\u30ea\u30af\u30a8\u30b9\u30c8
 
-##Pop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=\u524a\u9664\u306e\u78ba\u8a8d
 message.confirm.delete=''{0}'' \u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm.destroy.title=\u7834\u68c4\u306e\u78ba\u8a8d
@@ -91,7 +96,7 @@ message.request-info-failure=\u60c5\u5831\u3092\u30ea\u30af\u30a8\u30b9\u30c8\u3
 message.confirm.delete-hold.title=\u30db\u30fc\u30eb\u30c9\u306e\u524a\u9664
 message.confirm.delete-hold=''{0}'' \u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm.close-rejected-record.title=\u78ba\u8a8d
-message.confirm.close-rejected-record=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b\u3002 \u524a\u9664\u3059\u308b\u3068\u3001\u30d5\u30a1\u30a4\u30eb\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3059\u308b\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u307e\u305f\u4f7f\u7528\u3067\u304d\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3059\u3002message.confirm.unlink.title=\u78ba\u8a8d\u306e\u30ea\u30f3\u30af\u306e\u89e3\u9664
+message.confirm.close-rejected-record=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b? \u524a\u9664\u3059\u308b\u3068\u3001\u30d5\u30a1\u30a4\u30eb\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3059\u308b\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u307e\u305f\u4f7f\u7528\u3067\u304d\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3059\u3002
 message.confirm.unlink.title=\u78ba\u8a8d\u306e\u30ea\u30f3\u30af\u306e\u89e3\u9664
 message.confirm.unlink.text=\u3053\u306e\u30ec\u30b3\u30fc\u30c9\u306e\u30ea\u30f3\u30af\u3092\u89e3\u9664\u3057\u3066\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 
@@ -151,6 +156,7 @@ actions.file-hold-report=\u751f\u6210\u3055\u308c\u305f\u30db\u30fc\u30eb\u30c9\
 actions.move-dm-record=\u30ec\u30b3\u30fc\u30c9\u306e\u79fb\u52d5
 actions.recorded-version-config=\u81ea\u52d5\u5ba3\u8a00\u30aa\u30d7\u30b7\u30e7\u30f3
 actions.add-relationship=\u95a2\u4fc2\u306e\u8ffd\u52a0
+actions.classify-content=\u5206\u985e
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u500b\u306e\u9078\u629e\u3055\u308c\u305f\u30a2\u30a4\u30c6\u30e0
@@ -250,6 +256,9 @@ status.rm-version-record=\u30d0\u30fc\u30b8\u30e7\u30f3\u30ec\u30b3\u30fc\u30c9
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=\u3059\u3079\u3066\u306e\u6539\u8a02\u304c\u8a18\u9332\u3055\u308c\u307e\u3059
 status.rm-recorded-version-history-major-revisions=\u5927\u5e45\u306a\u6539\u8a02\u306e\u307f\u304c\u8a18\u9332\u3055\u308c\u307e\u3059
+## Classification
+status.rm-classified-record=\u5206\u985e\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9
+status.rm-classified-document=\u5206\u985e\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb
 # Exif
 status.exif=EXIF \u30e1\u30bf\u30c7\u30fc\u30bf\u304c\u5229\u7528\u53ef\u80fd\u3067\u3059
 status.geographic=\u4f4d\u7f6e\u60c5\u5831\u30e1\u30bf\u30c7\u30fc\u30bf\u5229\u7528\u53ef\u80fd
@@ -315,7 +324,7 @@ label.dod.captureDate=\u30ad\u30e3\u30d7\u30c1\u30e3\u65e5
 label.dod.contact=\u9023\u7d61\u5148
 label.dod.contentManagementSystem=\u30b3\u30f3\u30c6\u30f3\u30c4\u7ba1\u7406\u30b7\u30b9\u30c6\u30e0
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=\u5f79\u5272\u306e\u5b9a\u7fa9
 tool.rm-define-roles.description=\u5f79\u5272\u306e\u4f5c\u6210/\u7de8\u96c6
 tool.rm-custom-metadata.label=\u30ab\u30b9\u30bf\u30e0\u30e1\u30bf\u30c7\u30fc\u30bf
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=\u30e6\u30fc\u30b6\u30fc\u6a29\u5229\u30ec\u30dd\u30fc
 tool.rm-user-rights.description=\u30e6\u30fc\u30b6\u30fc\u6a29\u5229\u30ec\u30dd\u30fc\u30c8
 tool.rm-users-and-groups.label=\u30e6\u30fc\u30b6\u30fc\u3068\u30b0\u30eb\u30fc\u30d7
 tool.rm-users-and-groups.description=\u30e6\u30fc\u30b6\u30fc\u3068\u30b0\u30eb\u30fc\u30d7
+
+# Admin Console tools
+tool.group.classification=\u5206\u985e
+tool.classification-levels.label=\u5206\u985e\u30ec\u30d9\u30eb
+tool.classification-levels.description=\u5206\u985e\u30ec\u30d9\u30eb
+tool.security-clearance.label=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30af\u30ea\u30a2\u30e9\u30f3\u30b9
+tool.security-clearance.description=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30af\u30ea\u30a2\u30e9\u30f3\u30b9
 
 ## Buttons
 button.sort.ascending=\u6607\u9806\u30bd\u30fc\u30c8
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=\u5e74\u306e\u901a\u7b97\u9031\uff08\u
 ## Banner icon messages
 banner.rejected-record.info=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u60c5\u5831\u3092\u8868\u793a\u3057\u307e\u3059
 banner.rejected-record.close=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u307e\u3059
+banner.classification.info=\u5206\u985e
