DUTCH: Updated RM 3.0 bundle based on EN-RM-rev105468
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106520 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=Vitale record
 label.set.disposition=Beschikkingsschema
 label.set.customMetadata=Aangepaste eigenschappen
 label.set.recordVersion=Recordversie
+label.set.classification=Classificatie
 label.hold.reason=Reden
 label.hold.delete.empty=Wachtstand verwijderen indien leeg
 label.recordLevelDisposition=Toegepast op
@@ -57,6 +58,10 @@ label.file=Archiveren
 label.box=Doos
 label.versionDescription=Beschrijving van versie
 label.VersionLabel=Label voor versie
+label.initialClassification=Aanvankelijke classificatie
+label.currentClassification=Huidige classificatie
+label.classificationAuthority=Classificatieautoriteit
+label.classificationReasons=Reden(en) voor classificatie
 
 ## Common Property Selector
 label.menu.content=Content
@@ -151,6 +156,7 @@ actions.file-hold-report=Wachtstandrapport genereren
 actions.move-dm-record=Record verplaatsen
 actions.recorded-version-config=Opties voor automatisch declareren
 actions.add-relationship=Relatie toevoegen
+actions.classify-content=Classificeren
 
 ## File Plan Action Outcomes
 message.multi-select={0} geselecteerde onderdelen
@@ -250,6 +256,9 @@ status.rm-version-record=Versierecord
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=Alle revisies worden vastgelegd
 status.rm-recorded-version-history-major-revisions=Alleen primaire revisies worden vastgelegd
+## Classification
+status.rm-classified-record=Geclassificeerde record
+status.rm-classified-document=Geclassificeerd bestand
 # Exif
 status.exif=EXIF-metagegevens beschikbaar
 status.geographic=Metagegevens van geolocatie beschikbaar
@@ -315,7 +324,7 @@ label.dod.captureDate=Vastlegdatum
 label.dod.contact=Contact
 label.dod.contentManagementSystem=Content Management System
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=Rollen defini\u00ebren
 tool.rm-define-roles.description=Rollen maken en bewerken
 tool.rm-custom-metadata.label=Aangepaste metagegevens
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=Rapport gebruikersrechten
 tool.rm-user-rights.description=Rapport gebruikersrechten
 tool.rm-users-and-groups.label=Gebruikers en groepen
 tool.rm-users-and-groups.description=Gebruikers en groepen
+
+# Admin Console tools
+tool.group.classification=Classificatie
+tool.classification-levels.label=Classificatieniveaus
+tool.classification-levels.description=Classificatieniveaus
+tool.security-clearance.label=Veiligheidsmachtiging
+tool.security-clearance.description=Veiligheidsmachtiging
 
 ## Buttons
 button.sort.ascending=Oplopend sorteren
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=Week van het jaar (bijv. 31)
 ## Banner icon messages
 banner.rejected-record.info=Raadpleeg informatie over de afgewezen record
 banner.rejected-record.close=De afgewezen-recordwaarschuwing verwijderen
+banner.classification.info=Classificatie
