--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -500,4 +500,4 @@ file-to.substitution.date.year.week.label=Woche des Jahres (z. B. 31)
 ## Banner icon messages
 banner.rejected-record.info=Angaben zu abgelehntem Record anzeigen
 banner.rejected-record.close=Warnhinweis f\u00fcr abgelehnen Record entfernen
-banner.classification.info=Klassifizierung
+banner.classification.info=Klassifiziert
