FRENCH: Updated RM 3.0 bundle based on EN-RM-rev106535
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106972 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -500,4 +500,4 @@ file-to.substitution.date.year.week.label=Semaine de l'ann\u00e9e (p.ex., 31)
 ## Banner icon messages
 banner.rejected-record.info=Voir les informations sur le document d'archives rejet\u00e9
 banner.rejected-record.close=Supprimer l'avertissement associ\u00e9 au rejet du document d'archives
-banner.classification.info=Classement
+banner.classification.info=Class\u00e9s
