SPANISH: Updated RM 3.0 bundle based on EN-RM-rev106535
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106973 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nb.properties
+++ b/rm-share/config/alfresco/messages/rm_nb.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=Sv\u00e6rt viktig oppf\u00f8ring
 label.set.disposition=Disposisjonsplan
 label.set.customMetadata=Tilpassede egenskaper
 label.set.recordVersion=Oppf\u00f8ringsversjon
+label.set.classification=Klassifisering
 label.hold.reason=Grunn
 label.hold.delete.empty=Slett hold n\u00e5r tomt
 label.recordLevelDisposition=Gjelder
@@ -57,6 +58,10 @@ label.file=Fil
 label.box=Eske
 label.versionDescription=Versjonsbeskrivelse
 label.VersionLabel=Versjonsetikett
+label.initialClassification=Utgangsklassifisering
+label.currentClassification=N\u00e5v\u00e6rende klassifisering
+label.classificationAuthority=Klassifiseringsmyndighet
+label.classificationReasons=Klassifiseringsgrunn(er)
 
 ## Common Property Selector
 label.menu.content=Innhold
@@ -91,7 +96,7 @@ message.request-info-failure=Det oppstod en feil under foresp\u00f8rselen om inf
 message.confirm.delete-hold.title=Slett hold
 message.confirm.delete-hold=Er du sikker p\u00e5 at du vil slette ''{0}''?
 message.confirm.close-rejected-record.title=Bekreft
-message.confirm.close-rejected-record=Er du sikker p\u00e5 at du vil fjerne den avviste oppf\u00f8ringsadvarselen. Etter at den er fjernet, vil alternativene for \u00e5 kunne erkl\u00e6re filen som en oppf\u00f8ring, v\u00e6r tilgjengelige igjen.
+message.confirm.close-rejected-record=Er du sikker p\u00e5 at du vil fjerne den avviste oppf\u00f8ringsadvarselen? Etter at den er fjernet, vil valgene om \u00e5 erkl\u00e6re filen som en opptegnelse v\u00e6re tilgjengelige igjen.
 message.confirm.unlink.title=Koble fra bekreftelsen
 message.confirm.unlink.text=Er du sikker p\u00e5 at du vil koble fra oppf\u00f8ringen?
 
@@ -151,6 +156,7 @@ actions.file-hold-report=Generer holdrapport
 actions.move-dm-record=Flytt oppf\u00f8ring
 actions.recorded-version-config=Alternativer med automatiske erkl\u00e6ringer
 actions.add-relationship=Legg til forhold
+actions.classify-content=Klassifiser
 
 ## File Plan Action Outcomes
 message.multi-select={0} valgte elementer
@@ -250,6 +256,9 @@ status.rm-version-record=Versjonsoppf\u00f8ring
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=Alle revisjoner registreres
 status.rm-recorded-version-history-major-revisions=Kun hovedrevisjoner registreres
+## Classification
+status.rm-classified-record=Klassifisert opptegnelse
+status.rm-classified-document=Klassifisert fil
 # Exif
 status.exif=EXIF-metadata tilgjengelig
 status.geographic=Geografisk lokasjon metadata tilgjengelig
@@ -315,7 +324,7 @@ label.dod.captureDate=Opptaksdato
 label.dod.contact=Kontakt
 label.dod.contentManagementSystem=Innholdsforvaltningssystem
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=Definer roller
 tool.rm-define-roles.description=Opprett og rediger roller
 tool.rm-custom-metadata.label=Tilpassede metadata
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=Brukerrettighetsrapport
 tool.rm-user-rights.description=Brukerrettighetsrapport
 tool.rm-users-and-groups.label=Brukere og grupper
 tool.rm-users-and-groups.description=Brukere og grupper
+
+# Admin Console tools
+tool.group.classification=Klassifisering
+tool.classification-levels.label=Klassifiseringsniv\u00e5er
+tool.classification-levels.description=Klassifiseringsniv\u00e5er
+tool.security-clearance.label=Sikkerhetsklarering
+tool.security-clearance.description=Sikkerhetsklarering
 
 ## Buttons
 button.sort.ascending=Sorter stigende
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=Ukenummer (f.eks. 31)
 ## Banner icon messages
 banner.rejected-record.info=Se informasjon om den avviste oppf\u00f8ringen
 banner.rejected-record.close=Fjern den avviste oppf\u00f8ringsadvarselen
+banner.classification.info=Klassifisert
