--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_nb.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_nb.properties
@@ -1,7 +1,4 @@
-label.list.no.data.message=Det finnes ikke noen definerte forhold enn\u00e5
+label.list.no.data.message=Ingen definerte forhold enn\u00e5
 label.toolbar.relationships=Forhold
 label.button.new-relationship=Legg til forhold
-label.confirmation.title.delete-relationship=Slett forhold
-label.confirmationPrompt.delete-relationship=Er du siker p\u00e5 at du vil slette ''{node.properties.cm:name}''?
 label.delete-relationship=Slett forhold
-label.delete-relationship.successMessage=''{node.properties.cm:name}'' er n\u00e5 slettet
