BRAZILIAN Portuguese: Updated RM 3.0 bundle based on EN-RM-rev106535
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106979 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=Documento arquiv\u00edstico vital
 label.set.disposition=Programa\u00e7\u00e3o de disposi\u00e7\u00e3o
 label.set.customMetadata=Propriedades personalizadas
 label.set.recordVersion=Vers\u00e3o de documento arquiv\u00edstico
+label.set.classification=Classifica\u00e7\u00e3o
 label.hold.reason=Motivo
 label.hold.delete.empty=Excluir Manter quando vazio
 label.recordLevelDisposition=Aplicado a
@@ -57,6 +58,10 @@ label.file=Arquivo
 label.box=Caixa
 label.versionDescription=Descri\u00e7\u00e3o da vers\u00e3o
 label.VersionLabel=R\u00f3tulo de vers\u00e3o
+label.initialClassification=Classifica\u00e7\u00e3o inicial
+label.currentClassification=Classifica\u00e7\u00e3o atual
+label.classificationAuthority=Autoridade de classifica\u00e7\u00e3o
+label.classificationReasons=Motivo(s) da classifica\u00e7\u00e3o
 
 ## Common Property Selector
 label.menu.content=Conte\u00fado
@@ -91,7 +96,7 @@ message.request-info-failure=Ocorreu um erro ao solicitar informa\u00e7\u00f5es
 message.confirm.delete-hold.title=Excluir espera
 message.confirm.delete-hold=Tem certeza de que deseja excluir ''{0}''?
 message.confirm.close-rejected-record.title=Confirmar
-message.confirm.close-rejected-record=Tem certeza de que deseja remover a advert\u00eancia do documento arquiv\u00edstico rejeitado. Uma vez removida, as op\u00e7\u00f5es para declarar o arquivo como um documento arquiv\u00edstico estar\u00e3o dispon\u00edveis novamente.
+message.confirm.close-rejected-record=Tem certeza de que deseja remover a advert\u00eancia do documento arquiv\u00edstico rejeitado? Depois de removida, as op\u00e7\u00f5es de declarar o arquivo como um registro estar\u00e1 dispon\u00edvel novamente.
 message.confirm.unlink.title=Anular v\u00ednculo da confirma\u00e7\u00e3o
 message.confirm.unlink.text=Tem certeza que deseja anular o v\u00ednculo do documento arquiv\u00edstico?
 
@@ -151,6 +156,7 @@ actions.file-hold-report=Gerar relat\u00f3rio de espera
 actions.move-dm-record=Mover documento arquiv\u00edstico
 actions.recorded-version-config=Op\u00e7\u00f5es de auto declara\u00e7\u00e3o
 actions.add-relationship=Adicionar relacionamento
+actions.classify-content=Classificar
 
 ## File Plan Action Outcomes
 message.multi-select={0} itens selecionados
@@ -250,6 +256,9 @@ status.rm-version-record=Documento arquiv\u00edstico da vers\u00e3o
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=Todas as revis\u00f5es ser\u00e3o registradas
 status.rm-recorded-version-history-major-revisions=Somente ser\u00e3o registradas as revis\u00f5es principais
+## Classification
+status.rm-classified-record=Registro classificado
+status.rm-classified-document=Arquivo classificado
 # Exif
 status.exif=Metadados EXIF dispon\u00edveis
 status.geographic=Metadados de geolocaliza\u00e7\u00e3o dispon\u00edveis
@@ -315,7 +324,7 @@ label.dod.captureDate=Data de captura
 label.dod.contact=Contato
 label.dod.contentManagementSystem=Sistema de gerenciamento de conte\u00fado
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=Definir fun\u00e7\u00f5es
 tool.rm-define-roles.description=Criar e editar fun\u00e7\u00f5es
 tool.rm-custom-metadata.label=Metadados personalizados
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=Relat\u00f3rio de direitos do usu\u00e1rio
 tool.rm-user-rights.description=Relat\u00f3rio de direitos do usu\u00e1rio
 tool.rm-users-and-groups.label=Usu\u00e1rios e grupos
 tool.rm-users-and-groups.description=Usu\u00e1rios e grupos
+
+# Admin Console tools
+tool.group.classification=Classifica\u00e7\u00e3o
+tool.classification-levels.label=N\u00edveis de classifica\u00e7\u00e3o
+tool.classification-levels.description=N\u00edveis de classifica\u00e7\u00e3o
+tool.security-clearance.label=Libera\u00e7\u00e3o de seguran\u00e7a
+tool.security-clearance.description=Libera\u00e7\u00e3o de seguran\u00e7a
 
 ## Buttons
 button.sort.ascending=Classificar em ordem crescente
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=Semana do ano (ex.: 31)
 ## Banner icon messages
 banner.rejected-record.info=Consulte as informa\u00e7\u00f5es sobre o documento arquiv\u00edstico rejeitado
 banner.rejected-record.close=Remova o registro de advert\u00eancia rejeitado
+banner.classification.info=Classificados
