SIMP CHINESE: Updated RM 3.0 bundle based on EN-RM-rev106535
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@106981 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=\u6838\u5fc3\u8bb0\u5f55
 label.set.disposition=\u5904\u7f6e\u8ba1\u5212
 label.set.customMetadata=\u81ea\u5b9a\u4e49\u5c5e\u6027
 label.set.recordVersion=\u8bb0\u5f55\u7248\u672c
+label.set.classification=\u5206\u7c7b
 label.hold.reason=\u539f\u56e0
 label.hold.delete.empty=\u7a7a\u65f6\u5220\u9664\u4fdd\u5b58
 label.recordLevelDisposition=\u9002\u7528\u4e8e
@@ -57,6 +58,10 @@ label.file=\u6587\u4ef6
 label.box=\u7bb1
 label.versionDescription=\u7248\u672c\u8bf4\u660e
 label.VersionLabel=\u7248\u672c\u6807\u7b7e
+label.initialClassification=\u521d\u59cb\u5206\u7c7b
+label.currentClassification=\u5f53\u524d\u5206\u7c7b
+label.classificationAuthority=\u5206\u7c7b\u6388\u6743
+label.classificationReasons=\u5206\u7c7b\u539f\u56e0
 
 ## Common Property Selector
 label.menu.content=\u5185\u5bb9
@@ -91,7 +96,7 @@ message.request-info-failure=\u5728\u8bf7\u6c42\u4fe1\u606f\u65f6\u51fa\u9519
 message.confirm.delete-hold.title=\u5220\u9664\u4fdd\u5b58
 message.confirm.delete-hold=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
 message.confirm.close-rejected-record.title=\u786e\u8ba4
-message.confirm.close-rejected-record=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a\u3002 \u4e00\u65e6\u5220\u9664\uff0c\u58f0\u660e\u6587\u4ef6\u4e3a\u8bb0\u5f55\u7684\u9009\u9879\u5c06\u518d\u6b21\u53ef\u7528\u3002
+message.confirm.close-rejected-record=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a\uff1f \u5220\u9664\u540e\uff0c\u58f0\u660e\u6587\u4ef6\u4e3a\u8bb0\u5f55\u7684\u9009\u9879\u5c06\u518d\u6b21\u53ef\u7528\u3002
 message.confirm.unlink.title=\u53d6\u6d88\u786e\u8ba4\u7684\u94fe\u63a5
 message.confirm.unlink.text=\u662f\u5426\u786e\u5b9a\u8981\u53d6\u6d88\u8bb0\u5f55\u7684\u94fe\u63a5\uff1f
 
@@ -151,6 +156,7 @@ actions.file-hold-report=\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 actions.move-dm-record=\u79fb\u52a8\u8bb0\u5f55
 actions.recorded-version-config=\u81ea\u52a8\u58f0\u660e\u9009\u9879
 actions.add-relationship=\u6dfb\u52a0\u5173\u7cfb
+actions.classify-content=\u5206\u7c7b
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u4e2a\u6240\u9009\u9879\u76ee
@@ -250,6 +256,9 @@ status.rm-version-record=\u7248\u672c\u8bb0\u5f55
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=\u5c06\u8bb0\u5f55\u6240\u6709\u4fee\u8ba2
 status.rm-recorded-version-history-major-revisions=\u53ea\u4f1a\u8bb0\u5f55\u4e3b\u8981\u4fee\u8ba2
+## Classification
+status.rm-classified-record=\u5206\u7c7b\u7684\u8bb0\u5f55
+status.rm-classified-document=\u5206\u7c7b\u7684\u6587\u4ef6
 # Exif
 status.exif=EXIF \u5143\u6570\u636e\u53ef\u7528
 status.geographic=\u5b9a\u4f4d\u5143\u6570\u636e\u53ef\u7528
@@ -315,7 +324,7 @@ label.dod.captureDate=\u6355\u6349\u65e5\u671f
 label.dod.contact=\u8054\u7cfb\u4eba
 label.dod.contentManagementSystem=\u5185\u5bb9\u7ba1\u7406\u7cfb\u7edf
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=\u5b9a\u4e49\u89d2\u8272
 tool.rm-define-roles.description=\u521b\u5efa\u548c\u7f16\u8f91\u89d2\u8272
 tool.rm-custom-metadata.label=\u81ea\u5b9a\u4e49\u5143\u6570\u636e
@@ -334,6 +343,13 @@ tool.rm-user-rights.label=\u7528\u6237\u6743\u9650\u62a5\u544a
 tool.rm-user-rights.description=\u7528\u6237\u6743\u9650\u62a5\u544a
 tool.rm-users-and-groups.label=\u7528\u6237\u548c\u7ec4
 tool.rm-users-and-groups.description=\u7528\u6237\u548c\u7ec4
+
+# Admin Console tools
+tool.group.classification=\u5206\u7c7b
+tool.classification-levels.label=\u5206\u7c7b\u7ea7\u522b
+tool.classification-levels.description=\u5206\u7c7b\u7ea7\u522b
+tool.security-clearance.label=\u5b89\u5168\u8c03\u67e5
+tool.security-clearance.description=\u5b89\u5168\u8c03\u67e5
 
 ## Buttons
 button.sort.ascending=\u5347\u5e8f\u6392\u5e8f
@@ -484,3 +500,4 @@ file-to.substitution.date.year.week.label=\u5e74\u5ea6\u7b2c\u51e0\u5468\uff08\u
 ## Banner icon messages
 banner.rejected-record.info=\u8bf7\u53c2\u9605\u6709\u5173\u62d2\u7edd\u7684\u8bb0\u5f55\u7684\u4fe1\u606f
 banner.rejected-record.close=\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a
+banner.classification.info=\u5df2\u5206\u7c7b
