DUTCH: Updated RM 3.0 file based on EN-RM-rev106535
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107083 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -500,4 +500,4 @@ file-to.substitution.date.year.week.label=Week van het jaar (bijv. 31)
 ## Banner icon messages
 banner.rejected-record.info=Raadpleeg informatie over de afgewezen record
 banner.rejected-record.close=De afgewezen-recordwaarschuwing verwijderen
-banner.classification.info=Classificatie
+banner.classification.info=Geclassificeerd
