--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -500,4 +500,4 @@ file-to.substitution.date.year.week.label=\u5e74\u306e\u901a\u7b97\u9031\uff08\u
 ## Banner icon messages
 banner.rejected-record.info=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u60c5\u5831\u3092\u8868\u793a\u3057\u307e\u3059
 banner.rejected-record.close=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u307e\u3059
-banner.classification.info=\u5206\u985e
+banner.classification.info=\u5206\u985e\u6e08\u307f
