RM-2333. Rename ClassificationAuthority to ClassificationAgency. +review RM This addresses parts of RM-2341, RM-2342, RM-2343 and RM-2344. It replaces authority with agency in the content model , the services and their APIs, the UI layer and the rm-automation tests.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107108 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -60,7 +60,7 @@ label.versionDescription=\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u8aac\u660e
 label.VersionLabel=\u30d0\u30fc\u30b8\u30e7\u30f3\u30e9\u30d9\u30eb
 label.initialClassification=\u6700\u521d\u306e\u5206\u985e
 label.currentClassification=\u73fe\u5728\u306e\u5206\u985e
-label.classificationAuthority=\u5206\u985e\u6a29\u9650
+label.classificationAgency=\u5206\u985e\u6a29\u9650
 label.classificationReasons=\u5206\u985e\u7406\u7531
 
 ## Common Property Selector
