--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -60,7 +60,7 @@ label.versionDescription=Description de la version
 label.VersionLabel=Libell\u00e9 de la version
 label.initialClassification=Classement initial
 label.currentClassification=Classement actuel
-label.classificationAuthority=D\u00e9tenteur du classement
+label.classificationAgency=D\u00e9tenteur du classement
 label.classificationReasons=Motif(s) du classement
 
 ## Common Property Selector
