--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -60,7 +60,7 @@ label.versionDescription=\u7248\u672c\u8bf4\u660e
 label.VersionLabel=\u7248\u672c\u6807\u7b7e
 label.initialClassification=\u521d\u59cb\u5206\u7c7b
 label.currentClassification=\u5f53\u524d\u5206\u7c7b
-label.classificationAuthority=\u5206\u7c7b\u6388\u6743
+label.classificationAgency=\u5206\u7c7b\u6388\u6743
 label.classificationReasons=\u5206\u7c7b\u539f\u56e0
 
 ## Common Property Selector
