--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -60,7 +60,7 @@ label.versionDescription=Versionsbeschreibung
 label.VersionLabel=Versionsbezeichnung
 label.initialClassification=Urspr\u00fcngliche Klassifizierung
 label.currentClassification=Momentane Klassifizierung
-label.classificationAgency=Klassifizierungsinstanz
+label.classificationAgency=Klassifizierungsbeh\u00f6rde
 label.classificationReasons=Grund/Gr\u00fcnde f\u00fcr Klassifizierung
 
 ## Common Property Selector
@@ -500,4 +500,3 @@ file-to.substitution.date.year.week.label=Woche des Jahres (z. B. 31)
 ## Banner icon messages
 banner.rejected-record.info=Angaben zu abgelehntem Record anzeigen
 banner.rejected-record.close=Warnhinweis f\u00fcr abgelehnen Record entfernen
-banner.classification.info=Klassifiziert
