--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -60,7 +60,7 @@ label.versionDescription=Description de la version
 label.VersionLabel=Libell\u00e9 de la version
 label.initialClassification=Classement initial
 label.currentClassification=Classement actuel
-label.classificationAgency=D\u00e9tenteur du classement
+label.classificationAgency=Agence de classement
 label.classificationReasons=Motif(s) du classement
 
 ## Common Property Selector
@@ -500,4 +500,3 @@ file-to.substitution.date.year.week.label=Semaine de l'ann\u00e9e (p.ex., 31)
 ## Banner icon messages
 banner.rejected-record.info=Voir les informations sur le document d'archives rejet\u00e9
 banner.rejected-record.close=Supprimer l'avertissement associ\u00e9 au rejet du document d'archives
-banner.classification.info=Class\u00e9s
