--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -60,7 +60,7 @@ label.versionDescription=Descrizione versione
 label.VersionLabel=Etichetta versione
 label.initialClassification=Classificazione iniziale
 label.currentClassification=Classificazione attuale
-label.classificationAgency=Autorit\u00e0 di classificazione
+label.classificationAgency=Agenzia di classificazione
 label.classificationReasons=Motivo/i di classificazione
 
 ## Common Property Selector
@@ -500,4 +500,3 @@ file-to.substitution.date.year.week.label=Settimana dell'anno (ad es. 31)
 ## Banner icon messages
 banner.rejected-record.info=Vedere le informazioni sul record respinto
 banner.rejected-record.close=Rimuovere l'avviso del record respinto
-banner.classification.info=Classificazione
