JAPANESE: Updated RM 3.0 bundle based on EN-RM-rev107117
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107414 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -60,7 +60,7 @@ label.versionDescription=\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u8aac\u660e
 label.VersionLabel=\u30d0\u30fc\u30b8\u30e7\u30f3\u30e9\u30d9\u30eb
 label.initialClassification=\u6700\u521d\u306e\u5206\u985e
 label.currentClassification=\u73fe\u5728\u306e\u5206\u985e
-label.classificationAgency=\u5206\u985e\u6a29\u9650
+label.classificationAgency=\u5206\u985e\u6a5f\u95a2
 label.classificationReasons=\u5206\u985e\u7406\u7531
 
 ## Common Property Selector
@@ -500,4 +500,3 @@ file-to.substitution.date.year.week.label=\u5e74\u306e\u901a\u7b97\u9031\uff08\u
 ## Banner icon messages
 banner.rejected-record.info=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u60c5\u5831\u3092\u8868\u793a\u3057\u307e\u3059
 banner.rejected-record.close=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u307e\u3059
-banner.classification.info=\u5206\u985e\u6e08\u307f
