BRAZILIAN Portuguese: Updated RM 3.0 bundle based on EN-RM-rev107117
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107418 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -60,7 +60,7 @@ label.versionDescription=Descri\u00e7\u00e3o da vers\u00e3o
 label.VersionLabel=R\u00f3tulo de vers\u00e3o
 label.initialClassification=Classifica\u00e7\u00e3o inicial
 label.currentClassification=Classifica\u00e7\u00e3o atual
-label.classificationAgency=Autoridade de classifica\u00e7\u00e3o
+label.classificationAgency=Ag\u00eancia de classifica\u00e7\u00e3o
 label.classificationReasons=Motivo(s) da classifica\u00e7\u00e3o
 
 ## Common Property Selector
@@ -500,4 +500,3 @@ file-to.substitution.date.year.week.label=Semana do ano (ex.: 31)
 ## Banner icon messages
 banner.rejected-record.info=Consulte as informa\u00e7\u00f5es sobre o documento arquiv\u00edstico rejeitado
 banner.rejected-record.close=Remova o registro de advert\u00eancia rejeitado
-banner.classification.info=Classificados
