SIMP CHINESE: Updated RM 3.0 bundle based on EN-RM-rev107117
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107419 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -60,7 +60,7 @@ label.versionDescription=\u7248\u672c\u8bf4\u660e
 label.VersionLabel=\u7248\u672c\u6807\u7b7e
 label.initialClassification=\u521d\u59cb\u5206\u7c7b
 label.currentClassification=\u5f53\u524d\u5206\u7c7b
-label.classificationAgency=\u5206\u7c7b\u6388\u6743
+label.classificationAgency=\u5206\u7c7b\u4ee3\u7406
 label.classificationReasons=\u5206\u7c7b\u539f\u56e0
 
 ## Common Property Selector
@@ -500,4 +500,3 @@ file-to.substitution.date.year.week.label=\u5e74\u5ea6\u7b2c\u51e0\u5468\uff08\u
 ## Banner icon messages
 banner.rejected-record.info=\u8bf7\u53c2\u9605\u6709\u5173\u62d2\u7edd\u7684\u8bb0\u5f55\u7684\u4fe1\u606f
 banner.rejected-record.close=\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a
-banner.classification.info=\u5df2\u5206\u7c7b
