--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -3,6 +3,7 @@ label.button.cancel=Cancel
 label.classify.dialog.title=Classify File
 label.classify.dialog.title.rm=Classify Record
 label.classify.levels=Classification
+label.classify.by=Classified By
 label.classify.agency=Classification Agency
 label.classify.reasons=Classification Reason(s)
 label.classify.content.success=Successfully classified content
