GERMAN: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107574 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -60,6 +60,7 @@ label.versionDescription=Versionsbeschreibung
 label.VersionLabel=Versionsbezeichnung
 label.initialClassification=Urspr\u00fcngliche Klassifizierung
 label.currentClassification=Momentane Klassifizierung
+label.classifiedBy=Klassifiziert von
 label.classificationAgency=Klassifizierungsbeh\u00f6rde
 label.classificationReasons=Grund/Gr\u00fcnde f\u00fcr Klassifizierung
 
