--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_de.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_de.properties
@@ -3,6 +3,7 @@ label.button.cancel=Abbrechen
 label.classify.dialog.title=Datei klassifizieren
 label.classify.dialog.title.rm=Record klassifizieren
 label.classify.levels=Klassifizierung
+label.classify.by=Klassifiziert von
 label.classify.agency=Klassifizierungsbeh\u00f6rde
 label.classify.reasons=Grund/Gr\u00fcnde f\u00fcr Klassifizierung
 label.classify.content.success=Inhalt wurde erfolgreich klassifiziert
